# ChangeLog for x11-libs/pango
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/pango/ChangeLog,v 1.261 2009/07/21 19:49:04 mrpouet Exp $

*pango-1.24.5 (22 Jul 2009)

  22 Jul 2009; Romain Perier <mrpouet@gentoo.org> +pango-1.24.5.ebuild:
  Version bump to 1.24.5 . Fix two crashes and one invalid weak reference

  09 Jul 2009; Romain Perier <mrpouet@gentoo.org>
  pango-1.24.4.ebuild:
  Fix bug #277193. Drop rm call from src_install() because file no longer
  generated

*pango-1.24.4 (09 Jul 2009)

  09 Jul 2009; Romain Perier <mrpouet@gentoo.org>
  +pango-1.24.4.ebuild:
  Version bump to 1.24.4. Bug fixes

*pango-1.24.3 (29 Jun 2009)

  29 Jun 2009; Gilles Dartiguelongue <eva@gentoo.org> -pango-1.22.4.ebuild,
  -pango-1.22.4-r1.ebuild, -files/pango-1.22.4-special-chars-crash.patch,
  -pango-1.24.1.ebuild, +pango-1.24.3.ebuild:
  Version bump. Build fixes with newer automake, various bug fixes. Clean up
  old revisions.

  27 May 2009; Raúl Porcel <armin76@gentoo.org> pango-1.24.2.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #268976

  27 May 2009; Brent Baude <ranger@gentoo.org> pango-1.24.2.ebuild:
  Marking pango-1.24.2 ppc64 and ppc for bug 268976

  25 May 2009; Jeroen Roovers <jer@gentoo.org> pango-1.24.2.ebuild:
  Stable for HPPA (bug #268976).

  25 May 2009; Markus Meier <maekke@gentoo.org> pango-1.24.2.ebuild:
  amd64/x86 stable, bug #268976

*pango-1.24.2 (18 May 2009)

  18 May 2009; Gilles Dartiguelongue <eva@gentoo.org> +pango-1.24.2.ebuild:
  Bump to 1.24.2. Bug fixes.

  13 May 2009; Nirbheek Chauhan <nirbheek@gentoo.org> pango-1.24.1.ebuild:
  Fix0r bug 269686 -- x11-libs/cairo[X?,svg]

*pango-1.24.1 (04 May 2009)

  04 May 2009; Gilles Dartiguelongue <eva@gentoo.org> -pango-1.18.4.ebuild,
  -pango-1.20.5.ebuild, +pango-1.24.1.ebuild:
  New version for GNOME 2.26. Change font loading API to allow lazy loading,