@@ -3,9 +3,9 @@ DIST pango-1.24.2.tar.bz2 1528238 RMD160 948bee4fa9725330e3f041758ef321d618bbdb9
 DIST pango-1.24.3.tar.bz2 1505848 RMD160 1fe1837e9f8b080260ae3766682d9e4692654ae1 SHA1 9ae5c85d66a1aae75642414a24b258b29adf1b3a SHA256 f7729e7c133d1ba24e28d63da71c1902f17f4563ca31555d99d8e5a25aaa9309
 DIST pango-1.24.4.tar.bz2 1521044 RMD160 9a175bbe0d9393ede373d00c922a5b3ec9597935 SHA1 2cf84b735d48b573ad083af8c8688b5bbab940c8 SHA256 adbd11f182ec63939d6364cbb59e86991a48582e7d3641cda80529b40b399559
 DIST pango-1.24.5.tar.bz2 1519944 RMD160 7e436752734c55950ad5feced7c7d5c3f040a1b4 SHA1 a5aa40b78546a7ee59f21804b172e5d47ef776ad SHA256 0f733d1ec3e8dafcae152d7ac58f1090bee1fd856176c8fee0e81b0e42392f4e
-EBUILD pango-1.24.2.ebuild 2147 RMD160 12e2b0b31c7f9692b8dbec99918694a8924010cb SHA1 16a328848418f534597c02ea8024e4b16a9aa630 SHA256 ee3434806007f06894b32256171ba573f86ec29387785d2e0b00ecb8b768d0e7
+EBUILD pango-1.24.2.ebuild 2162 RMD160 08de1fce87b0d62a76dbce9f48758c1064fe1971 SHA1 eea2c0eb6326c30ae0ffa6bd1fb03caac06f2e29 SHA256 93caf9753ca39b50eaefcf7ecf8da47ece37e9bc1e785496e1fdc7845d9aa0e8
 EBUILD pango-1.24.3.ebuild 2143 RMD160 c0d1432220c8a63689de7e9acede6d8fc945ed51 SHA1 fa2aa759c32b22219ef49e2713e72b498fd38ba1 SHA256 e07b802809a78173d6a775e901e396e571da59c40575672533c1951c5732641b
 EBUILD pango-1.24.4.ebuild 2031 RMD160 a5fc4d56d987b715a9dd69e181e77023523e1e1d SHA1 e70eb374b7acac8fc1e24604556ac16f9e88d464 SHA256 ec5576f9cbd3d836a9d4a34929675473b8e56ec0eccb1ddf074d498280e18f64
-EBUILD pango-1.24.5.ebuild 2031 RMD160 0e068c416755900aa03f4034a5a4535c81c31e68 SHA1 090fd994261df7c2d757af1a3e3fa75b6ad1f2a8 SHA256 d24abc25d54795cecad24cb418cbf970f777023fe388a6b46ede5d2e588b52f8
-MISC ChangeLog 32341 RMD160 fb04eb013027ec0fc374013e8e39c0681c9a3bcb SHA1 1558ca22ea485ad76ae292e07708735677006a9f SHA256 77062ba93ad572daeed478d106c7e5accff862c7675e8258d03229a5ff5a1cf8
+EBUILD pango-1.24.5.ebuild 2046 RMD160 9536b7daee397b82de39edfb63ec7f56782626ce SHA1 39c2db0eb61f2eabcc41b44375cc40d9ca9b3155 SHA256 966204a5dc488543959aa280ae5bfd176242ee665b0479aa75dc361a9221ef0f
+MISC ChangeLog 32576 RMD160 93d21a1bd713718ab50c977fa8de80099a519795 SHA1 9bac87ffa9abaef7fafbaedebc79095cb14e147f SHA256 948a93b023943b5126a83fa4eb5b35da6f15cb5c4ebf1e59d997d92d991e30a5
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
